import { TabStack } from "../../../src/app-shell/tab-stack";

const ServicesLayout = () => <TabStack title="Services" />;

export default ServicesLayout;
